--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "devDependencies": {
     "async": "^0.9.0",
     "express": "^4.12.3",
+    "http-proxy": "^1.10.1",
     "jsx-loader": "^0.13.1",
     "morgan": "^1.5.2",
     "react-tools": "^0.13.1",
-    "webpack": "^1.7.3",
-    "webpack-dev-middleware": "^1.0.11",
-    "webpack-dev-server": "git+https://github.com/jamon/webpack-dev-server.git#installable"
+    "serve-static": "^1.9.2",
+    "webpack": "^1.8.4",
+    "webpack-dev-middleware": "^1.0.11"
   },
-  "dependencies": {},
+  "dependencies": {
+    "dev-server": "git://github.com/jamon/dev-server"
+  },
   "jshintConfig": {
     "esnext": true
   }
