--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": " ",
   "devDependencies": {
+    "angular": "^1.3.15",
     "async": "^0.9.0",
     "express": "^4.12.3",
     "http-proxy": "^1.10.1",
     "jsx-loader": "^0.13.1",
     "morgan": "^1.5.2",
+    "ngreact": "^0.1.4",
     "react-tools": "^0.13.1",
     "serve-static": "^1.9.2",
     "webpack": "^1.8.4",
